--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="42x42" href="./public/espacio/lluvia-de-meteoros.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Vite + React</title>
+    <title>INFOGALAX</title>
   </head>
   <body>
     <div id="root"></div>
